<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/all_poster_large"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_all_medium">

    <TextView
        android:id="@+id/tv_logout_title"
        style="@style/TextContent.Title"
        android:layout_marginBottom="@dimen/margin_all_small"
        android:text="@string/all_logout"
        app:layout_constraintBottom_toTopOf="@id/tv_logout_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_logout_desc"
        style="@style/TextContent.Desc.Center"
        android:layout_marginBottom="@dimen/margin_all_medium"
        android:text="@string/logout_ask"
        app:layout_constraintBottom_toTopOf="@id/tv_logout_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_logout_title" />

    <View
        android:id="@+id/v_logout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_logout_confirm"
        app:layout_constraintEnd_toStartOf="@id/tv_logout_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_logout_confirm" />

    <TextView
        android:id="@+id/tv_logout_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_all_medium"
        android:text="@string/logout_cancel"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="@id/tv_logout_confirm"
        app:layout_constraintEnd_toStartOf="@id/tv_logout_confirm"
        app:layout_constraintStart_toEndOf="@id/v_logout"
        app:layout_constraintTop_toTopOf="@id/tv_logout_confirm" />

    <TextView
        android:id="@+id/tv_logout_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_logout"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_logout_cancel"
        app:layout_constraintTop_toBottomOf="@id/tv_logout_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>