<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_all_medium"
            android:layout_marginEnd="@dimen/margin_all_medium">

            <ImageView
                android:id="@+id/img_add_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="contentDescription" />

            <TextView
                android:id="@+id/textview_add_toolbar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_all_small"
                android:layout_marginEnd="@dimen/margin_all_small"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/add_title"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/text_all_toolbar"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_add_back"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_add">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ImageView
                android:id="@+id/iv_add_preview"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="@dimen/margin_all_medium"
                android:contentDescription="@string/add_preview_photo"
                android:src="@drawable/ic_placeholder"
                app:layout_constraintBottom_toTopOf="@id/bt_add_camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/bt_add_camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_all_medium"
                android:layout_marginTop="@dimen/margin_all_medium"
                android:layout_marginEnd="@dimen/margin_all_small"
                android:background="@drawable/bg_button"
                android:text="@string/add_camera"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintBottom_toTopOf="@id/ed_add_description"
                app:layout_constraintEnd_toStartOf="@id/bt_add_gallery"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_add_preview" />

            <Button
                android:id="@+id/bt_add_gallery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_all_small"
                android:layout_marginEnd="@dimen/margin_all_medium"
                android:background="@drawable/bg_button"
                android:text="@string/add_gallery"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintBottom_toBottomOf="@id/bt_add_camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/bt_add_camera"
                app:layout_constraintTop_toTopOf="@id/bt_add_camera" />

            <EditText
                android:id="@+id/ed_add_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_all_medium"
                android:background="@drawable/bg_edittext_rounded"
                android:gravity="top"
                android:hint="@string/add_description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:lines="8"
                android:maxLines="8"
                android:padding="@dimen/margin_all_small"
                app:layout_constraintBottom_toTopOf="@id/v_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bt_add_camera" />

            <View
                android:id="@+id/v_add"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/button_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ed_add_description" />

            <Button
                android:id="@+id/button_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_all_medium"
                android:background="@drawable/bg_button"
                android:text="@string/add_upload"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/v_add" />

            <ProgressBar
                android:id="@+id/pb_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>