<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_all_medium"
            android:layout_marginEnd="@dimen/margin_all_medium">

            <ImageView
                android:id="@+id/img_detail_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="contentDescription" />

            <TextView
                android:id="@+id/textview_detail_toolbar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_all_small"
                android:layout_marginEnd="@dimen/margin_all_small"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/text_all_toolbar"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/img_detail_bookmark"
                app:layout_constraintStart_toEndOf="@id/img_detail_back"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_detail_bookmark"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_bookmark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textview_detail_toolbar"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="contentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_detail">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_detail_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/all_image"
                android:transitionName="@string/photo"
                app:layout_constraintBottom_toTopOf="@id/tv_detail_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_detail_name"
                style="@style/TextContent.Title"
                android:layout_marginStart="@dimen/margin_all_medium"
                android:layout_marginTop="@dimen/margin_all_medium"
                android:layout_marginEnd="@dimen/margin_all_medium"
                android:transitionName="@string/all_name"
                app:layout_constraintBottom_toTopOf="@id/tv_detail_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_detail_photo" />

            <TextView
                android:id="@+id/tv_detail_date"
                style="@style/TextContent.Desc"
                android:layout_marginTop="@dimen/margin_all_small"
                android:textStyle="italic"
                app:layout_constraintBottom_toTopOf="@id/tv_detail_description"
                app:layout_constraintEnd_toEndOf="@id/tv_detail_name"
                app:layout_constraintStart_toStartOf="@id/tv_detail_name"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_name" />

            <TextView
                android:id="@+id/tv_detail_description"
                style="@style/TextContent.Desc"
                android:layout_marginTop="@dimen/margin_all_small"
                android:layout_marginBottom="@dimen/margin_all_medium"
                android:transitionName="@string/add_description"
                app:layout_constraintBottom_toTopOf="@id/view_detail"
                app:layout_constraintEnd_toEndOf="@id/tv_detail_name"
                app:layout_constraintStart_toStartOf="@id/tv_detail_name"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_date" />

            <View
                android:id="@+id/view_detail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_description" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>