<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.SettingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_all_medium"
            android:layout_marginEnd="@dimen/margin_all_medium">

            <ImageView
                android:id="@+id/iv_setting_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="contentDescription" />

            <TextView
                android:id="@+id/tv_setting_toolbar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_all_small"
                android:layout_marginEnd="@dimen/margin_all_small"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/setting_title"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/text_all_toolbar"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_setting_back"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_language_title"
        style="@style/TextContent.Desc"
        android:layout_margin="@dimen/margin_all_medium"
        android:text="@string/setting_language"
        app:layout_constraintEnd_toStartOf="@id/tv_language_setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_setting" />

    <TextView
        android:id="@+id/tv_language_setting"
        style="@style/TextContent.Desc"
        android:layout_marginEnd="@dimen/margin_all_medium"
        android:textAlignment="textEnd"
        app:drawableEndCompat="@drawable/ic_forward"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_language_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_language_title"
        tools:text="Current Language" />

    <TextView
        android:id="@+id/tv_setting_logout"
        style="@style/TextContent.Desc"
        android:layout_margin="@dimen/margin_all_medium"
        android:text="@string/all_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_language_title" />
</androidx.constraintlayout.widget.ConstraintLayout>