<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/all_poster_large"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_all_medium">

    <TextView
        android:id="@+id/tv_resources_title"
        style="@style/TextContent.Title"
        android:layout_marginBottom="@dimen/margin_all_medium"
        android:text="@string/dialog_choose"
        app:layout_constraintBottom_toTopOf="@id/cl_resources_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_resources_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cl_resources_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_resources_title">

        <ImageView
            android:id="@+id/iv_resources_camera"
            android:layout_width="match_parent"
            android:layout_height="@dimen/all_poster_tiny"
            android:contentDescription="@string/add_camera"
            android:src="@drawable/ic_camera"
            app:layout_constraintBottom_toTopOf="@id/tv_resources_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_resources_camera"
            style="@style/TextContent.Desc.Center"
            android:text="@string/add_camera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/iv_resources_camera"
            app:layout_constraintStart_toStartOf="@id/iv_resources_camera"
            app:layout_constraintTop_toBottomOf="@id/iv_resources_camera" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_resources_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/cl_resources_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cl_resources_camera"
        app:layout_constraintTop_toTopOf="@id/cl_resources_camera">

        <ImageView
            android:id="@+id/iv_resources_gallery"
            android:layout_width="match_parent"
            android:layout_height="@dimen/all_poster_tiny"
            android:layout_marginStart="@dimen/margin_all_small"
            android:layout_marginEnd="@dimen/margin_all_tiny"
            android:contentDescription="@string/add_gallery"
            android:src="@drawable/ic_image"
            app:layout_constraintBottom_toTopOf="@id/tv_resources_gallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_resources_gallery"
            style="@style/TextContent.Desc.Center"
            android:text="@string/add_gallery"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/iv_resources_gallery"
            app:layout_constraintStart_toStartOf="@id/iv_resources_gallery"
            app:layout_constraintTop_toBottomOf="@id/iv_resources_gallery" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>